<resources>
    <string name="app_name">Money Mate</string>
    <string name="welcome">Welcome Back</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="have_account">Don\'t have a account?</string>
    <string name="link_signup">Sign Up</string>
    <string name="title_desc">Your Personal Finance Assistant</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="budget">Budget</string>
    <string name="feature">Feature</string>
    <string name="user">User</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiply">*</string>
    <string name="divide">/</string>
    <string name="equal">=</string>
    <string name="dot">.</string>
    <string name="Enter">Enter</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="transfer">Transfer</string>
    <string name="item">Item</string>
    <string name="transaction_record">Transaction Record</string>
    <string name="result">Result</string>
    <string name="title">Title</string>
    <string name="record_description">Record description</string>
    <string name="dateseparator">DateSeparator</string>
    <string name="choose_an_account">Choose an account</string>
    <string name="add_new_category">Add New Category</string>
    <string name="description">Description</string>
    <string name="datetime">DateTime</string>
    <string name="edit_record">Edit Record</string>
    <string name="titleRecord">Title :</string>
    <string-array name="testSpinner">
        <item>Choose An Account</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>

</resources>